fixed part 3 wrap

--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,26 @@ body{
 .square{
     height: 200px;
     width: 200px;
-    border: solid 2px #3882F6;
+    border: solid 4px #3882F6;
     border-radius: 25px;
+}
+.boxaroundsquare{
+    width: 200px;
 }
 .flex{
     display: flex;
+}
+.column{
+    flex-direction: column;
+}
+.flexone{
+    flex: 1;
+}
+.flexthree{
+    flex: 3;
+}
+.wrap{
+    flex-wrap: wrap;
 }
 .logo{
     width: 300px;
@@ -72,8 +87,12 @@ body{
     padding-right: 23%;
 }
 .paddingupdown{
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 8%;
+    padding-bottom: 8%;
+}
+.smallpaddingupdown{
+    padding-top: 4%;
+    padding-bottom: 4%;
 }
 .justifycenter{
     justify-content: center;
@@ -81,20 +100,26 @@ body{
 .justifybetween{
     justify-content: space-between;
 }
+.justifyevenly{
+    justify-content: space-evenly;
+}
 .justifyright{
     justify-content: end;
 }
 .aligncenter{
     align-items: center;
 }
-.flexone{
-    flex: 1;
-}
-.flexthree{
-    flex: 3;
+.aligncontent{
+    align-content: center;
 }
 .littlebar{
     padding-top: 30px;
     padding-bottom: 30px;
     flex: 0 1 auto;
+}
+.gap{
+    gap: 5%;
+}
+.textcenter{
+    text-align: center;
 }
